# wrap_xspec

./: .gitignore  README.md  docs-jb-env.yml  pyproject.toml
Tutorials/: LoadingPlottingSpectraAndModels.ipynb  LoadingSpectrum.ipynb
Tutorials/.ipynb_checkpoints/: LoadingSpectrum-checkpoint.ipynb
Tutorials/InputData/: Dash2_acisf14571.corr.arf  Dash2_acisf14571.rmf  Dash2_acisf14571_bkg.pi  Dash2_acisf14571_grpSNR3.pi  Dash2_acisf14572.corr.arf  Dash2_acisf14572.rmf  Dash2_acisf14572_bkg.pi  Dash2_acisf14572_grpSNR3.pi
wrap_xspec/: __init__.py  plot.py  spectrum.py
